--- a/research.html
+++ b/research.html
@@ -117,7 +117,7 @@
               </section>
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
-              <article id="Overview">
+              <article id="overview">
                 <header>
                   <h2>Research Overview</h2>
                 </header>
@@ -156,7 +156,7 @@
                   accelerate discoveries and expand the boundaries of the field.
                 </p>
               </article>
-              <article id="Projects">
+              <article id="projects">
                 <header>
                   <h2>Projects Overview</h2>
                 </header>
