--- a/research.html
+++ b/research.html
@@ -68,12 +68,16 @@
               <section>
                 <header>
                   <h3>
-                    <a href="research.html#overview">Research Overview</a>
+                    <a href="research.html#overview" class="scrolly"
+                      >Research Overview</a
+                    >
                   </h3>
                 </header>
                 <header>
                   <h3>
-                    <a href="research.html#projects">Projects overview</a>
+                    <a href="research.html#projects" class="scrolly"
+                      >Projects Overview</a
+                    >
                   </h3>
                 </header>
                 <div class="row gtr-50">
@@ -97,10 +101,7 @@
                     /></a>
                   </div>
                   <div class="col-8">
-                    <h4>
-                      Automated Calibration of Experimental Parameters in
-                      Trapped-Ion Quantum Computer
-                    </h4>
+                    <h4>Calibration of Trapped-Ion Systems</h4>
                   </div>
                   <div class="col-4">
                     <a href="#" class="image fit"
@@ -202,10 +203,7 @@
                 <hr />
                 <section>
                   <header>
-                    <h3>
-                      Automated Calibration of Experimental Parameters in
-                      Trapped-Ion Quantum Computer
-                    </h3>
+                    <h3>Calibration of Trapped-Ion Systems</h3>
                   </header>
                   <p>
                     The key advantages of Calibration of Trapped-Ion Systems
