--- a/research.html
+++ b/research.html
@@ -68,16 +68,12 @@
               <section>
                 <header>
                   <h3>
-                    <a href="research.html#overview" class="scrolly"
-                      >Research Overview</a
-                    >
+                    <a href="#overview" class="scrolly">Research Overview</a>
                   </h3>
                 </header>
                 <header>
                   <h3>
-                    <a href="research.html#projects" class="scrolly"
-                      >Projects Overview</a
-                    >
+                    <a href="#projects" class="scrolly">Projects Overview</a>
                   </h3>
                 </header>
                 <div class="row gtr-50">
