--- a/research.html
+++ b/research.html
@@ -101,7 +101,7 @@
                   </div>
                   <div class="col-4">
                     <a href="#" class="image fit"
-                      ><img src="images/pic12.jpg" alt=""
+                      ><img src="images/coulomb-peak.jpeg" alt=""
                     /></a>
                   </div>
                   <div class="col-8">
