--- a/research.html
+++ b/research.html
@@ -66,51 +66,20 @@
             <div class="col-4 col-12-mobile" id="sidebar">
               <hr class="first" />
               <section>
-                <header>
-                  <h3>
-                    <a href="#overview" class="scrolly">Research Overview</a>
-                  </h3>
-                </header>
-                <header>
-                  <h3>
-                    <a href="#projects" class="scrolly">Projects Overview</a>
-                  </h3>
-                </header>
-                <div class="row gtr-50">
-                  <div class="col-4">
-                    <a
-                      href="quantum-compilation-with-rydberg-atoms.html"
-                      class="image fit"
-                      ><img src="images/rydberg.jpeg" alt=""
-                    /></a>
-                  </div>
-                  <div class="col-8">
-                    <h4>
-                      <a href="quantum-compilation-with-rydberg-atoms.html"
-                        >Quantum Compilation with Rydberg Atoms</a
-                      >
-                    </h4>
-                  </div>
-                  <div class="col-4">
-                    <a href="#" class="image fit"
-                      ><img src="images/trapped-ion.jpeg" alt=""
-                    /></a>
-                  </div>
-                  <div class="col-8">
-                    <h4>Calibration of Trapped-Ion Systems</h4>
-                  </div>
-                  <div class="col-4">
-                    <a href="#" class="image fit"
-                      ><img src="images/coulomb-peak.jpeg" alt=""
-                    /></a>
-                  </div>
-                  <div class="col-8">
-                    <h4>
-                      Charge Noise in Semiconductor Spin Qubits for Quantum
-                      Computing
-                    </h4>
-                  </div>
-                </div>
+                <ul>
+                  <li>
+                    <a href="research.html">Overview</a>
+                  </li>
+                  <li>
+                    <a href="quantum-compilation-with-rydberg-atoms.html"
+                      >Quantum Compilation with Rydberg Atoms</a
+                    >
+                  </li>
+                  <li><a href="#">Calibration of Trapped-Ion Systems</a></li>
+                  <li>
+                    <a href="#">Charge Noise in Semiconductor Spin Qubits</a>
+                  </li>
+                </ul>
               </section>
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
