--- a/research.html
+++ b/research.html
@@ -85,7 +85,7 @@
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="overview">
                 <header>
-                  <h2>Research Overview</h2>
+                  <h2>Overview</h2>
                 </header>
                 <p>
                   Throughout my research journey, I have worked with various
@@ -123,104 +123,97 @@
                 </p>
               </article>
               <hr />
-              <article id="projects">
+              <section>
                 <header>
-                  <h2>Projects Overview</h2>
-                  <p></p>
-                </header>
-                <section>
-                  <header>
-                    <h3>
-                      <a href="quantum-compilation-with-rydberg-atoms.html"
-                        >Quantum Compilation with Rydberg Atoms</a
-                      >
-                    </h3>
-                  </header>
-                  <p>
-                    Advances in laser technology have propelled the rapid
-                    development of neutral atom quantum computing platforms in
-                    last few years. However, to successfully run quantum
-                    algorithms on quantum platforms, high-level algorithmic
-                    descriptions must be translated into executable hardware
-                    operations through a compilation process, and the
-                    compilation work for neutral atom quantum computing is still
-                    in the early exploratory stages.
-                  </p>
-                  <p>
-                    Neutral atom quantum computing systems can coherently move
-                    the positions of atoms trapped in optical tweezers, allowing
-                    real-time changes in qubit connectivity during computation
-                    while satisfying the constraints of the optical tweezer
-                    array. This dynamic connectivity, combined with the large
-                    number of qubits, architecture design introduces new
-                    possibilities and design challenges for quantum computing
-                    compilation. Rapidly completing the compilation process and
-                    fully leveraging the unique features of neutral atom quantum
-                    computing systems is a critical and practically significant
-                    task.
-                  </p>
-                  <footer>
-                    <a
-                      href="quantum-compilation-with-rydberg-atoms.html"
-                      class="button"
-                      >Read more</a
+                  <h3>
+                    <a href="quantum-compilation-with-rydberg-atoms.html"
+                      >Quantum Compilation with Rydberg Atoms</a
                     >
-                  </footer>
-                </section>
-
-                <section>
-                  <header>
-                    <h3>Calibration of Trapped-Ion Systems</h3>
-                  </header>
-                  <p>
-                    The key advantages of Calibration of Trapped-Ion Systems
-                    include long quantum coherence times, high-precision
-                    single-qubit and two-qubit operations, and high-fidelity
-                    operations between any two qubits within the system. In
-                    trapped-ion quantum computing, single-qubit operations
-                    typically involve transitions between internal energy levels
-                    of the ions, which can be achieved by addressing the target
-                    ion with laser pulses. However, multi-qubit operations rely
-                    on the collective vibrational modes of the ion chain, known
-                    as phonons. Critical parameters such as ion positions,
-                    phonon frequencies, and the strength of ion-phonon
-                    interactions are closely related to the structure of the ion
-                    trap chip, the surrounding environment, and the
-                    configuration of the trapping potential. To achieve
-                    high-performance trapped-ion quantum computing, precise
-                    calibration of system parameters is essential.
-                  </p>
-                  <footer>
-                    <a href="#" class="button">Read more</a>
-                  </footer>
-                </section>
-                <section>
-                  <header>
-                    <h3>
-                      Charge Noise in Semiconductor Spin Qubits for Quantum
-                      Computing
-                    </h3>
-                  </header>
-                  <p>
-                    Semiconductor spin qubits are a promising candidate for
-                    quantum computing, owing to their compatibility with
-                    existing semiconductor fabrication techniques, long
-                    coherence times, and scalability for large-scale
-                    integration. However, building a robust quantum computer
-                    with semiconductor spin qubits faces significant challenges,
-                    the most pressing being noise—particularly charge noise.
-                    Charge noise accelerates decoherence, leading to quantum
-                    state dephasing caused by external disturbances, which
-                    undermines the stability and reliability of qubit
-                    operations. To address this critical issue, it is essential
-                    to first study and understand the underlying mechanisms of
-                    charge noise.
-                  </p>
-                  <footer>
-                    <a href="#" class="button">Read more</a>
-                  </footer>
-                </section>
-              </article>
+                  </h3>
+                </header>
+                <p>
+                  Advances in laser technology have propelled the rapid
+                  development of neutral atom quantum computing platforms in
+                  last few years. However, to successfully run quantum
+                  algorithms on quantum platforms, high-level algorithmic
+                  descriptions must be translated into executable hardware
+                  operations through a compilation process, and the compilation
+                  work for neutral atom quantum computing is still in the early
+                  exploratory stages.
+                </p>
+                <p>
+                  Neutral atom quantum computing systems can coherently move the
+                  positions of atoms trapped in optical tweezers, allowing
+                  real-time changes in qubit connectivity during computation
+                  while satisfying the constraints of the optical tweezer array.
+                  This dynamic connectivity, combined with the large number of
+                  qubits, architecture design introduces new possibilities and
+                  design challenges for quantum computing compilation. Rapidly
+                  completing the compilation process and fully leveraging the
+                  unique features of neutral atom quantum computing systems is a
+                  critical and practically significant task.
+                </p>
+                <footer>
+                  <a
+                    href="quantum-compilation-with-rydberg-atoms.html"
+                    class="button"
+                    >Read more</a
+                  >
+                </footer>
+              </section>
+              <hr />
+              <section>
+                <header>
+                  <h3>Calibration of Trapped-Ion Systems</h3>
+                </header>
+                <p>
+                  The key advantages of Calibration of Trapped-Ion Systems
+                  include long quantum coherence times, high-precision
+                  single-qubit and two-qubit operations, and high-fidelity
+                  operations between any two qubits within the system. In
+                  trapped-ion quantum computing, single-qubit operations
+                  typically involve transitions between internal energy levels
+                  of the ions, which can be achieved by addressing the target
+                  ion with laser pulses. However, multi-qubit operations rely on
+                  the collective vibrational modes of the ion chain, known as
+                  phonons. Critical parameters such as ion positions, phonon
+                  frequencies, and the strength of ion-phonon interactions are
+                  closely related to the structure of the ion trap chip, the
+                  surrounding environment, and the configuration of the trapping
+                  potential. To achieve high-performance trapped-ion quantum
+                  computing, precise calibration of system parameters is
+                  essential.
+                </p>
+                <footer>
+                  <a href="#" class="button">Read more</a>
+                </footer>
+              </section>
+              <hr />
+              <section>
+                <header>
+                  <h3>
+                    Charge Noise in Semiconductor Spin Qubits for Quantum
+                    Computing
+                  </h3>
+                </header>
+                <p>
+                  Semiconductor spin qubits are a promising candidate for
+                  quantum computing, owing to their compatibility with existing
+                  semiconductor fabrication techniques, long coherence times,
+                  and scalability for large-scale integration. However, building
+                  a robust quantum computer with semiconductor spin qubits faces
+                  significant challenges, the most pressing being
+                  noise—particularly charge noise. Charge noise accelerates
+                  decoherence, leading to quantum state dephasing caused by
+                  external disturbances, which undermines the stability and
+                  reliability of qubit operations. To address this critical
+                  issue, it is essential to first study and understand the
+                  underlying mechanisms of charge noise.
+                </p>
+                <footer>
+                  <a href="#" class="button">Read more</a>
+                </footer>
+              </section>
             </div>
           </div>
         </div>
