--- a/research.html
+++ b/research.html
@@ -68,16 +68,26 @@
               <section>
                 <ul>
                   <li>
-                    <a href="research.html">Overview</a>
+                    <a href="research.html"><strong>Overview</strong></a>
                   </li>
                   <li>
                     <a href="quantum-compilation-with-rydberg-atoms.html"
-                      >Quantum Compilation with Rydberg Atoms</a
+                      ><strong
+                        >Quantum Compilation with Rydberg Atoms</strong
+                      ></a
                     >
                   </li>
-                  <li><a href="#">Calibration of Trapped-Ion Systems</a></li>
                   <li>
-                    <a href="#">Charge Noise in Semiconductor Spin Qubits</a>
+                    <a href="#"
+                      ><strong>Calibration of Trapped-Ion Systems</strong></a
+                    >
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><strong
+                        >Charge Noise in Semiconductor Spin Qubits</strong
+                      ></a
+                    >
                   </li>
                 </ul>
               </section>
