--- a/publications.html
+++ b/publications.html
@@ -41,9 +41,15 @@
                     >Quantum Compilation with Rydberg Atoms</a
                   >
                 </li>
-                <li><a href="#">Calibration of Trapped-Ion Systems</a></li>
                 <li>
-                  <a href="#">Charge Noise in Semiconductor Spin Qubits</a>
+                  <a href="calibration-of-trapped-ion-systems.html"
+                    >Calibration of Trapped-Ion Systems</a
+                  >
+                </li>
+                <li>
+                  <a href="charge-noise-in-semiconductor-spin-qubits.html"
+                    >Charge Noise in Semiconductor Spin Qubits</a
+                  >
                 </li>
               </ul>
             </li>
