--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -101,7 +101,8 @@
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
                 <header>
-                  <h2>Quantum Compilation with Rydberg Atoms</h2>
+                  <h2>Calibration of Trapped-Ion Systems</h2>
+                  <p></p>
                 </header>
               </article>
               <section>
