--- a/charge-noise-in-semiconductor-spin-qubits.html
+++ b/charge-noise-in-semiconductor-spin-qubits.html
@@ -101,7 +101,8 @@
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
                 <header>
-                  <h2>Quantum Compilation with Rydberg Atoms</h2>
+                  <h2>Charge Noise in Semiconductor Spin Qubits</h2>
+                  <p></p>
                 </header>
               </article>
               <section>
