--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -87,6 +87,13 @@
                     <a href="calibration-of-trapped-ion-systems.html"
                       ><strong>Calibration of Trapped-Ion Systems</strong></a
                     >
+                    <ul>
+                      <li>
+                        <a
+                          href="#introduction"
+                          >Introduction</a
+                        >
+                      </li>
                   </li>
                   <li>
                     <a href="charge-noise-in-semiconductor-spin-qubits.html"
@@ -105,9 +112,9 @@
                   <p></p>
                 </header>
               </article>
-              <section>
+              <section id="introduction">
                 <header>
-                  <h3></h3>
+                  <h3>Introduction</h3>
                 </header>
                 <p></p>
               </section>
