--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -89,11 +89,9 @@
                     >
                     <ul>
                       <li>
-                        <a
-                          href="#introduction"
-                          >Introduction</a
-                        >
+                        <a href="#introduction">Introduction</a>
                       </li>
+                    </ul>
                   </li>
                   <li>
                     <a href="charge-noise-in-semiconductor-spin-qubits.html"
