--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -114,7 +114,43 @@
                 <header>
                   <h3>Introduction</h3>
                 </header>
-                <p></p>
+                <p>
+                  Trapped-ion quantum computing, as one of the earliest
+                  platforms to demonstrate quantum computation, has been under
+                  development for over 30 years. From the initial demonstration
+                  of Schrödinger's cat states to the creation of fully connected
+                  quantum bit (qubit) chips, the trapped-ion platform has
+                  consistently shown great potential as a quantum computing
+                  hardware solution. The fundamental principles of trapped-ion
+                  quantum computing are as follows:
+                </p>
+                <ol>
+                  <li>
+                    <strong>Qubit encoding:</strong> Individual ions are used as
+                    qubits by leveraging different energy levels within the ion.
+                    These levels often result from orbital splitting, forming
+                    fine or hyperfine structures. The ion's internal energy
+                    levels are typically rich and non-equidistant, making them
+                    suitable for qubit encoding.
+                  </li>
+                  <li>
+                    <strong>Qubit manipulation:</strong> By carefully selecting
+                    specific laser frequencies and applying precise laser
+                    techniques, the trapped-ion system enables the preparation
+                    of initial quantum states, the manipulation of qubit states,
+                    and the measurement of quantum states.
+                  </li>
+                  <li>
+                    <strong>Qubit coupling:</strong> Since ions are charged
+                    particles, they interact with one another through Coulomb
+                    forces, which include long-range interaction terms. This
+                    natural property allows ions in a quantum chip to form a
+                    fully connected network. Specially tailored laser or
+                    microwave techniques can be used to mediate interactions
+                    between any pair of qubits, granting the trapped-ion
+                    platform its inherent full-connectivity feature.
+                  </li>
+                </ol>
               </section>
               <section>
                 <header>
