--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -89,7 +89,7 @@
                     >
                     <ul>
                       <li>
-                        <a href="#introduction">Introduction</a>
+                        <a href="#introduction" class="scrolly">Introduction</a>
                       </li>
                     </ul>
                   </li>
