--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -119,10 +119,10 @@
                   platforms to demonstrate quantum computation, has been under
                   development for over 30 years. From the initial demonstration
                   of Schrödinger's cat states to the creation of fully connected
-                  quantum bit (qubit) chips, the trapped-ion platform has
-                  consistently shown great potential as a quantum computing
-                  hardware solution. The fundamental principles of trapped-ion
-                  quantum computing are as follows:
+                  qubit chips, the trapped-ion platform has consistently shown
+                  great potential as a quantum computing hardware solution. The
+                  fundamental principles of trapped-ion quantum computing are as
+                  follows:
                 </p>
                 <ol>
                   <li>
@@ -152,6 +152,7 @@
                   </li>
                 </ol>
               </section>
+              <hr />
               <section>
                 <header>
                   <h3>Links</h3>
