--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -155,6 +155,25 @@
               <hr />
               <section>
                 <header>
+                  <h3>Physical process</h3>
+                </header>
+                <h4>Vibration modes</h4>
+                <h4>Two-level approximation and Raman process</h4>
+                <h4>single-qubit gates</h4>
+                <h4>Two-qubit gates</h4>
+              </section>
+              <hr />
+              <section>
+                <header>
+                  <h3>Calibration</h3>
+                </header>
+                <h4>Motivation</h4>
+                <h4>Calibration of phonon frequency</h4>
+                <h4>Calibration of Lamb-Dicke parameters</h4>
+              </section>
+              <hr />
+              <section>
+                <header>
                   <h3>Links</h3>
                 </header>
                 <ul>
