--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -87,11 +87,13 @@
                     <a href="calibration-of-trapped-ion-systems.html"
                       ><strong>Calibration of Trapped-Ion Systems</strong></a
                     >
-                    <ul>
+                    <ol>
                       <li>
                         <a href="#introduction" class="scrolly">Introduction</a>
+                        <a href="#physical" class="scrolly">Physical process</a>
+                        <a href="#calibration" class="scrolly">Calibration</a>
                       </li>
-                    </ul>
+                    </ol>
                   </li>
                   <li>
                     <a href="charge-noise-in-semiconductor-spin-qubits.html"
@@ -163,7 +165,7 @@
                 <h4>Two-qubit gates</h4>
               </section>
               <hr />
-              <section>
+              <section id="calibration">
                 <header>
                   <h3>Calibration</h3>
                 </header>
