--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -109,7 +109,50 @@
               <article id="main">
                 <header>
                   <h2>Calibration of Trapped-Ion Systems</h2>
-                  <p></p>
+                  <p>
+                    This project was conducted at the Institute for Quantum
+                    Computing, Baidu Inc., in collaboration with Dr. Jingbo
+                    Wang. The work has culminated in the development of three
+                    patents:
+                  </p>
+                  <ul>
+                    <li>
+                      J. Wang and <strong>C. Huang</strong>, "Ion trap chip
+                      parameter determining method and device, electronic
+                      equipment and medium,"
+                      <i
+                        >Chinese Patent
+                        <a
+                          href="https://patents.google.com/patent/CN117371547/en"
+                          >CN117371547</a
+                        ></i
+                      >, Granted 2023.
+                    </li>
+                    <li>
+                      <strong>C. Huang</strong> and J. Wang, "Ion trap chip
+                      parameter determining method and device, electronic
+                      equipment and medium,"
+                      <i
+                        >Chinese Patent
+                        <a
+                          href="https://patents.google.com/patent/CN117454997/en"
+                          >CN117454997</a
+                        ></i
+                      >, 2023.
+                    </li>
+                    <li>
+                      J. Wang and <strong>C. Huang</strong>, "Ion trap chip
+                      parameter calibration method and device, electronic
+                      equipment and medium,"
+                      <i
+                        >Chinese Patent
+                        <a
+                          href="https://patents.google.com/patent/CN117494829/en"
+                          >CN117494829</a
+                        ></i
+                      >, 2023.
+                    </li>
+                  </ul>
                 </header>
               </article>
               <section id="introduction">
