--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -202,7 +202,7 @@
                 </ol>
               </section>
               <hr />
-              <section>
+              <section id="physical">
                 <header>
                   <h3>Physical process</h3>
                 </header>
