--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -71,6 +71,8 @@
           <div class="row gtr-200">
             <div class="col-4 col-12-mobile" id="sidebar">
               <hr class="first" />
+              <header>
+                <h2>Research</h2>
               <section>
                 <ul>
                   <li>
