--- a/research.html
+++ b/research.html
@@ -71,6 +71,9 @@
           <div class="row gtr-200">
             <div class="col-4 col-12-mobile" id="sidebar">
               <hr class="first" />
+              <header>
+                <h3>Research</h3>
+              </header>
               <section>
                 <ul>
                   <li>
