--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -75,41 +75,33 @@
                 <h3>Research</h3>
               </header>
               <section>
-                <ul>
+                <h4><a href="research.html">Overview</a></h4>
+                <h4>
+                  <a href="quantum-compilation-with-rydberg-atoms.html"
+                    >Quantum Compilation with Rydberg Atoms</a
+                  >
+                </h4>
+                <h4>
+                  <a href="calibration-of-trapped-ion-systems.html"
+                    >Calibration of Trapped-Ion Systems</a
+                  >
+                </h4>
+                <ol>
                   <li>
-                    <a href="research.html"><strong>Overview</strong></a>
+                    <a href="#introduction" class="scrolly">Introduction</a>
                   </li>
                   <li>
-                    <a href="quantum-compilation-with-rydberg-atoms.html"
-                      ><strong
-                        >Quantum Compilation with Rydberg Atoms</strong
-                      ></a
-                    >
+                    <a href="#physical" class="scrolly">Physical process</a>
                   </li>
                   <li>
-                    <a href="calibration-of-trapped-ion-systems.html"
-                      ><strong>Calibration of Trapped-Ion Systems</strong></a
-                    >
-                    <ol>
-                      <li>
-                        <a href="#introduction" class="scrolly">Introduction</a>
-                      </li>
-                      <li>
-                        <a href="#physical" class="scrolly">Physical process</a>
-                      </li>
-                      <li>
-                        <a href="#calibration" class="scrolly">Calibration</a>
-                      </li>
-                    </ol>
+                    <a href="#calibration" class="scrolly">Calibration</a>
                   </li>
-                  <li>
-                    <a href="charge-noise-in-semiconductor-spin-qubits.html"
-                      ><strong
-                        >Charge Noise in Semiconductor Spin Qubits</strong
-                      ></a
-                    >
-                  </li>
-                </ul>
+                </ol>
+                <h4>
+                  <a href="charge-noise-in-semiconductor-spin-qubits.html"
+                    >Charge Noise in Semiconductor Spin Qubits</a
+                  >
+                </h4>
               </section>
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
@@ -158,6 +150,7 @@
                   </li>
                 </ul>
               </article>
+              <hr />
               <section id="introduction">
                 <header>
                   <h3>Introduction</h3>
