--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -76,11 +76,15 @@
               </header>
               <section>
                 <h4><a href="research.html">Overview</a></h4>
+              </section>
+              <section>
                 <h4>
                   <a href="quantum-compilation-with-rydberg-atoms.html"
                     >Quantum Compilation with Rydberg Atoms</a
                   >
                 </h4>
+              </section>
+              <section>
                 <h4>
                   <a href="calibration-of-trapped-ion-systems.html"
                     >Calibration of Trapped-Ion Systems</a
@@ -97,6 +101,8 @@
                     <a href="#calibration" class="scrolly">Calibration</a>
                   </li>
                 </ol>
+              </section>
+              <section>
                 <h4>
                   <a href="charge-noise-in-semiconductor-spin-qubits.html"
                     >Charge Noise in Semiconductor Spin Qubits</a
